# accs-cell-counting-imager-pub

./: .gitignore  LICENSE  README.md  pylintrc  pyproject.toml  setup.py
cell_counting_imager/: _param_rules.py  configurator.py  core.py  global_config.py  paths.py  recovery.py
cell_counting_imager/cli/: cci_config.py  cci_run.py  cci_test.py
cell_counting_imager/configs/: cci1.json  cci25.json  cci25_local.template.json  cci25_sim.json  common.json
cell_counting_imager/hw_control/: __init__.py  _tic_driver.py  cci1_hw.py  cci2_hw.py  cci_hw.py  errors.py
cell_counting_imager/image_processing/: __init__.py  cci1_legacy.py  cell_counter.py  common.py  counting.py  preprocessing.py  util.py
cell_counting_imager/old/: cell_counter_gui.py  fake_cci_camera.py  fake_stage.py  gui.kv  instrumentConfig.json  stateMachine.json  test_camera.py  test_http.py  test_imageShift.py
misc/: TODO  tic_settings.txt
